@@ -12,6 +12,7 @@ Version 2.8.0
 (not released yet)
 
 - Fix escapes in JavaScript backtick strings (#1679)
+- Make guessing prefer Python 3 lexer
 
 
 Version 2.7.4
